avoid page breaks in paragraphs for printing

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -26,6 +26,10 @@ footer.page-edit .last-updated .prefix {
         page-break-after: avoid;
     }
 
+    p {
+        page-break-inside: avoid;
+    }
+
     .theme-default-content h1:first-child {
         margin-top: 0 !important;
     }
